<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pm.bunkmanager.MainActivity1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/classes_conducted"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/fill_detail"
            android:id="@+id/classes_conducted"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/classes_present"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/fill_detail"
            android:id="@+id/classes_present"
            android:inputType="number"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/inputPercentageGroup"
                android:gravity="center">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60%"
                    android:checked="false"
                    android:id="@+id/radio1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="65%"
                    android:checked="false"
                    android:id="@+id/radio2"/>

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="70%"
                    android:checked="false"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="75%"
                    android:checked="true"
                    android:id="@+id/radio4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80%"
                    android:checked="false"
                    android:id="@+id/radio5"/>
            </RadioGroup>
            </LinearLayout>

        </HorizontalScrollView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bunk"
            android:textColor="@color/colorPrimary"
            android:shadowColor="#ff3d3d3d"
            android:shadowDx="2.0"
            android:shadowDy="1.0"
            android:id="@+id/helpmebunk"
            android:layout_marginTop="10dp"
            android:typeface="sans"/>
        <TextView
            android:id="@+id/outputResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fill_in_the_field"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>
